--- a/.env.sample
+++ b/.env.sample
@@ -1,3 +1,3 @@
-export BLOG_TOKEN="45346asdasd23432"
-export BLOG_OWNER="myusername"
-export BLOG_REPO_NAME="myusername.github.io"
+export BLOG_TOKEN=45346asdasd23432
+export BLOG_OWNER=myusername
+export BLOG_REPO_NAME=myusername.github.io
